fix: pre element caused to overflow and changed with p tag in video detail

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,3 @@
 #videoDetailPlayer iframe {
   width: 100%;
 }
-
-pre {
-  font-family: 'Roboto', sans-serif;
-}
